# alix-whatsapp-flows

./: README.md  package-lock.json
ai_api/: .gitignore  Dockerfile  deploy.sh  pyproject.toml
ai_api/notebooks/: agentic_flow.ipynb  demo_rag_flow.ipynb
ai_api/src/: main.py  test.py
ai_api/src/config/: speech_api_config.py  storage_api_config.py  translation_api_config.py  vertexai_config.py
ai_api/src/models/: Options.py  RequestModel.py
ai_api/src/routes/: llm.py
ai_api/src/services/: AI_Service.py  DatabaseService.py  SpeechToTextService.py
ai_api/src/utils/: formatting.py
flows/: .gitignore  app.js  eslint.config.mjs  package-lock.json  package.json
flows/config/: database.config.js  llm_api_config.js  mongodb.config.js  survey.config.js
flows/controllers/: flowController.js
flows/helpers/: database.helpers.js  format.helpers.js  messages.helpers.js  twilio.helpers.js  twilio_account.helpers.js
flows/models/: ContactModel.js
flows/routes/: admin.js  flow.js  index.js
flows/services/: BaseFlow.js  Flows.js  OnboardingFlow.js  SupportOptionService.js
flows/utils/: generateProfileColor.js
sample/: .gcloudignore  package-lock.json  package.json
sample/config/: database.config.js  twilio.config.js
sample/helpers/: messages.helpers.js  templates.helpers.js  twilio.helpers.js
sample/routes/: index.js  message.js
sample/services/: database.service.js
server/: pyproject.toml
server/notebooks/: agentic_flow.ipynb
webhook/: .gitignore  app.js  package-lock.json  package.json
webhook/config/: api_base.config.js  firestore.config.js  (+2 more)
(+27 files in other folders)
