[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["daria425 <darianaumova5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.2.3"
pymongo = {extras = ["srv"], version = "^4.8.0"}
python-dotenv = "^1.0.1"
ipython = "^8.26.0"
google-cloud-aiplatform = "^1.57.0"
google-cloud-translate = "^3.15.3"
selenium = "^4.22.0"
webdriver-manager = "^4.0.1"
beautifulsoup4 = "^4.12.3"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
